Analizador Sintactico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMA
    PUNTOCOMA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> listaSentencias
Rule 2     listaSentencias -> sentencia
Rule 3     listaSentencias -> listaSentencias sentencia
Rule 4     sentencia -> IMP IPARENT expresion DPARENT
Rule 5     sentencia -> ID ASIGNAR expresion
Rule 6     sentencia -> FOR sentencia TO expresion THEN ILLAVE listaSentencias DLLAVE
Rule 7     sentencia -> IF condicion THEN ILLAVE listaSentencias DLLAVE ELSE ILLAVE listaSentencias DLLAVE
Rule 8     expresion -> term
Rule 9     expresion -> expresion SUMA expresion
Rule 10    expresion -> expresion RESTA expresion
Rule 11    expresion -> expresion MULTIPLICADO expresion
Rule 12    expresion -> expresion DIVIDIDO expresion
Rule 13    expresion -> term concatenar term
Rule 14    concatenar -> CONCAT
Rule 15    condicion -> expresion relacion expresion
Rule 16    relacion -> ASIGNAR
Rule 17    relacion -> NOIGUAL
Rule 18    relacion -> MENORQ
Rule 19    relacion -> MAYORQ
Rule 20    relacion -> MENORIGUALQ
Rule 21    relacion -> MAYORIGUALQ
Rule 22    relacion -> IGUAL
Rule 23    term -> factor
Rule 24    term -> IPARENT expresion DPARENT
Rule 25    term -> ICOR expresion DCOR
Rule 26    factor -> ID
Rule 27    factor -> RESTA ENTERO
Rule 28    factor -> RESTA DECIMAL
Rule 29    factor -> ENTERO
Rule 30    factor -> DECIMAL
Rule 31    factor -> STR
Rule 32    factor -> empty
Rule 33    empty -> <empty>

Terminals, with rules where they appear

ASIGNAR              : 5 16
COMA                 : 
CONCAT               : 14
DCOR                 : 25
DECIMAL              : 28 30
DIVIDIDO             : 12
DLLAVE               : 6 7 7
DPARENT              : 4 24
ELSE                 : 7
ENTERO               : 27 29
FOR                  : 6
ICOR                 : 25
ID                   : 5 26
IF                   : 7
IGUAL                : 22
ILLAVE               : 6 7 7
IMP                  : 4
IPARENT              : 4 24
MAYORIGUALQ          : 21
MAYORQ               : 19
MENORIGUALQ          : 20
MENORQ               : 18
MULTIPLICADO         : 11
NOIGUAL              : 17
PUNTOCOMA            : 
RESTA                : 10 27 28
STR                  : 31
SUMA                 : 9
THEN                 : 6 7
TO                   : 6
error                : 

Nonterminals, with rules where they appear

concatenar           : 13
condicion            : 7
empty                : 32
expresion            : 4 5 6 9 9 10 10 11 11 12 12 15 15 24 25
factor               : 23
listaSentencias      : 1 3 6 7 7
programa             : 0
relacion             : 15
sentencia            : 2 3 6
term                 : 8 13 13

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . listaSentencias
    (2) listaSentencias -> . sentencia
    (3) listaSentencias -> . listaSentencias sentencia
    (4) sentencia -> . IMP IPARENT expresion DPARENT
    (5) sentencia -> . ID ASIGNAR expresion
    (6) sentencia -> . FOR sentencia TO expresion THEN ILLAVE listaSentencias DLLAVE
    (7) sentencia -> . IF condicion THEN ILLAVE listaSentencias DLLAVE ELSE ILLAVE listaSentencias DLLAVE

    IMP             shift and go to state 4
    ID              shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 7

    programa                       shift and go to state 1
    listaSentencias                shift and go to state 2
    sentencia                      shift and go to state 3

state 1

    (0) S' -> programa .



state 2

    (1) programa -> listaSentencias .
    (3) listaSentencias -> listaSentencias . sentencia
    (4) sentencia -> . IMP IPARENT expresion DPARENT
    (5) sentencia -> . ID ASIGNAR expresion
    (6) sentencia -> . FOR sentencia TO expresion THEN ILLAVE listaSentencias DLLAVE
    (7) sentencia -> . IF condicion THEN ILLAVE listaSentencias DLLAVE ELSE ILLAVE listaSentencias DLLAVE

    $end            reduce using rule 1 (programa -> listaSentencias .)
    IMP             shift and go to state 4
    ID              shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 7

    sentencia                      shift and go to state 8

state 3

    (2) listaSentencias -> sentencia .

    IMP             reduce using rule 2 (listaSentencias -> sentencia .)
    ID              reduce using rule 2 (listaSentencias -> sentencia .)
    FOR             reduce using rule 2 (listaSentencias -> sentencia .)
    IF              reduce using rule 2 (listaSentencias -> sentencia .)
    $end            reduce using rule 2 (listaSentencias -> sentencia .)
    DLLAVE          reduce using rule 2 (listaSentencias -> sentencia .)


state 4

    (4) sentencia -> IMP . IPARENT expresion DPARENT

    IPARENT         shift and go to state 9


state 5

    (5) sentencia -> ID . ASIGNAR expresion

    ASIGNAR         shift and go to state 10


state 6

    (6) sentencia -> FOR . sentencia TO expresion THEN ILLAVE listaSentencias DLLAVE
    (4) sentencia -> . IMP IPARENT expresion DPARENT
    (5) sentencia -> . ID ASIGNAR expresion
    (6) sentencia -> . FOR sentencia TO expresion THEN ILLAVE listaSentencias DLLAVE
    (7) sentencia -> . IF condicion THEN ILLAVE listaSentencias DLLAVE ELSE ILLAVE listaSentencias DLLAVE

    IMP             shift and go to state 4
    ID              shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 7

    sentencia                      shift and go to state 11

state 7

    (7) sentencia -> IF . condicion THEN ILLAVE listaSentencias DLLAVE ELSE ILLAVE listaSentencias DLLAVE
    (15) condicion -> . expresion relacion expresion
    (8) expresion -> . term
    (9) expresion -> . expresion SUMA expresion
    (10) expresion -> . expresion RESTA expresion
    (11) expresion -> . expresion MULTIPLICADO expresion
    (12) expresion -> . expresion DIVIDIDO expresion
    (13) expresion -> . term concatenar term
    (23) term -> . factor
    (24) term -> . IPARENT expresion DPARENT
    (25) term -> . ICOR expresion DCOR
    (26) factor -> . ID
    (27) factor -> . RESTA ENTERO
    (28) factor -> . RESTA DECIMAL
    (29) factor -> . ENTERO
    (30) factor -> . DECIMAL
    (31) factor -> . STR
    (32) factor -> . empty
    (33) empty -> .

  ! shift/reduce conflict for RESTA resolved as shift
    IPARENT         shift and go to state 17
    ICOR            shift and go to state 18
    ID              shift and go to state 19
    RESTA           shift and go to state 15
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    STR             shift and go to state 22
    CONCAT          reduce using rule 33 (empty -> .)
    SUMA            reduce using rule 33 (empty -> .)
    MULTIPLICADO    reduce using rule 33 (empty -> .)
    DIVIDIDO        reduce using rule 33 (empty -> .)
    ASIGNAR         reduce using rule 33 (empty -> .)
    NOIGUAL         reduce using rule 33 (empty -> .)
    MENORQ          reduce using rule 33 (empty -> .)
    MAYORQ          reduce using rule 33 (empty -> .)
    MENORIGUALQ     reduce using rule 33 (empty -> .)
    MAYORIGUALQ     reduce using rule 33 (empty -> .)
    IGUAL           reduce using rule 33 (empty -> .)

  ! RESTA           [ reduce using rule 33 (empty -> .) ]

    condicion                      shift and go to state 12
    expresion                      shift and go to state 13
    term                           shift and go to state 14
    factor                         shift and go to state 16
    empty                          shift and go to state 23

state 8

    (3) listaSentencias -> listaSentencias sentencia .

    IMP             reduce using rule 3 (listaSentencias -> listaSentencias sentencia .)
    ID              reduce using rule 3 (listaSentencias -> listaSentencias sentencia .)
    FOR             reduce using rule 3 (listaSentencias -> listaSentencias sentencia .)
    IF              reduce using rule 3 (listaSentencias -> listaSentencias sentencia .)
    $end            reduce using rule 3 (listaSentencias -> listaSentencias sentencia .)
    DLLAVE          reduce using rule 3 (listaSentencias -> listaSentencias sentencia .)


state 9

    (4) sentencia -> IMP IPARENT . expresion DPARENT
    (8) expresion -> . term
    (9) expresion -> . expresion SUMA expresion
    (10) expresion -> . expresion RESTA expresion
    (11) expresion -> . expresion MULTIPLICADO expresion
    (12) expresion -> . expresion DIVIDIDO expresion
    (13) expresion -> . term concatenar term
    (23) term -> . factor
    (24) term -> . IPARENT expresion DPARENT
    (25) term -> . ICOR expresion DCOR
    (26) factor -> . ID
    (27) factor -> . RESTA ENTERO
    (28) factor -> . RESTA DECIMAL
    (29) factor -> . ENTERO
    (30) factor -> . DECIMAL
    (31) factor -> . STR
    (32) factor -> . empty
    (33) empty -> .

  ! shift/reduce conflict for RESTA resolved as shift
    IPARENT         shift and go to state 17
    ICOR            shift and go to state 18
    ID              shift and go to state 19
    RESTA           shift and go to state 15
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    STR             shift and go to state 22
    CONCAT          reduce using rule 33 (empty -> .)
    DPARENT         reduce using rule 33 (empty -> .)
    SUMA            reduce using rule 33 (empty -> .)
    MULTIPLICADO    reduce using rule 33 (empty -> .)
    DIVIDIDO        reduce using rule 33 (empty -> .)

  ! RESTA           [ reduce using rule 33 (empty -> .) ]

    expresion                      shift and go to state 24
    term                           shift and go to state 14
    factor                         shift and go to state 16
    empty                          shift and go to state 23

state 10

    (5) sentencia -> ID ASIGNAR . expresion
    (8) expresion -> . term
    (9) expresion -> . expresion SUMA expresion
    (10) expresion -> . expresion RESTA expresion
    (11) expresion -> . expresion MULTIPLICADO expresion
    (12) expresion -> . expresion DIVIDIDO expresion
    (13) expresion -> . term concatenar term
    (23) term -> . factor
    (24) term -> . IPARENT expresion DPARENT
    (25) term -> . ICOR expresion DCOR
    (26) factor -> . ID
    (27) factor -> . RESTA ENTERO
    (28) factor -> . RESTA DECIMAL
    (29) factor -> . ENTERO
    (30) factor -> . DECIMAL
    (31) factor -> . STR
    (32) factor -> . empty
    (33) empty -> .

  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    IPARENT         shift and go to state 17
    ICOR            shift and go to state 18
    ID              shift and go to state 19
    RESTA           shift and go to state 15
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    STR             shift and go to state 22
    CONCAT          reduce using rule 33 (empty -> .)
    SUMA            reduce using rule 33 (empty -> .)
    MULTIPLICADO    reduce using rule 33 (empty -> .)
    DIVIDIDO        reduce using rule 33 (empty -> .)
    IMP             reduce using rule 33 (empty -> .)
    FOR             reduce using rule 33 (empty -> .)
    IF              reduce using rule 33 (empty -> .)
    $end            reduce using rule 33 (empty -> .)
    TO              reduce using rule 33 (empty -> .)
    DLLAVE          reduce using rule 33 (empty -> .)

  ! RESTA           [ reduce using rule 33 (empty -> .) ]
  ! ID              [ reduce using rule 33 (empty -> .) ]

    expresion                      shift and go to state 25
    term                           shift and go to state 14
    factor                         shift and go to state 16
    empty                          shift and go to state 23

state 11

    (6) sentencia -> FOR sentencia . TO expresion THEN ILLAVE listaSentencias DLLAVE

    TO              shift and go to state 26


state 12

    (7) sentencia -> IF condicion . THEN ILLAVE listaSentencias DLLAVE ELSE ILLAVE listaSentencias DLLAVE

    THEN            shift and go to state 27


state 13

    (15) condicion -> expresion . relacion expresion
    (9) expresion -> expresion . SUMA expresion
    (10) expresion -> expresion . RESTA expresion
    (11) expresion -> expresion . MULTIPLICADO expresion
    (12) expresion -> expresion . DIVIDIDO expresion
    (16) relacion -> . ASIGNAR
    (17) relacion -> . NOIGUAL
    (18) relacion -> . MENORQ
    (19) relacion -> . MAYORQ
    (20) relacion -> . MENORIGUALQ
    (21) relacion -> . MAYORIGUALQ
    (22) relacion -> . IGUAL

    SUMA            shift and go to state 29
    RESTA           shift and go to state 30
    MULTIPLICADO    shift and go to state 31
    DIVIDIDO        shift and go to state 32
    ASIGNAR         shift and go to state 33
    NOIGUAL         shift and go to state 34
    MENORQ          shift and go to state 35
    MAYORQ          shift and go to state 36
    MENORIGUALQ     shift and go to state 37
    MAYORIGUALQ     shift and go to state 38
    IGUAL           shift and go to state 39

    relacion                       shift and go to state 28

state 14

    (8) expresion -> term .
    (13) expresion -> term . concatenar term
    (14) concatenar -> . CONCAT

    SUMA            reduce using rule 8 (expresion -> term .)
    RESTA           reduce using rule 8 (expresion -> term .)
    MULTIPLICADO    reduce using rule 8 (expresion -> term .)
    DIVIDIDO        reduce using rule 8 (expresion -> term .)
    ASIGNAR         reduce using rule 8 (expresion -> term .)
    NOIGUAL         reduce using rule 8 (expresion -> term .)
    MENORQ          reduce using rule 8 (expresion -> term .)
    MAYORQ          reduce using rule 8 (expresion -> term .)
    MENORIGUALQ     reduce using rule 8 (expresion -> term .)
    MAYORIGUALQ     reduce using rule 8 (expresion -> term .)
    IGUAL           reduce using rule 8 (expresion -> term .)
    DPARENT         reduce using rule 8 (expresion -> term .)
    IMP             reduce using rule 8 (expresion -> term .)
    ID              reduce using rule 8 (expresion -> term .)
    FOR             reduce using rule 8 (expresion -> term .)
    IF              reduce using rule 8 (expresion -> term .)
    $end            reduce using rule 8 (expresion -> term .)
    TO              reduce using rule 8 (expresion -> term .)
    DLLAVE          reduce using rule 8 (expresion -> term .)
    DCOR            reduce using rule 8 (expresion -> term .)
    THEN            reduce using rule 8 (expresion -> term .)
    CONCAT          shift and go to state 41

    concatenar                     shift and go to state 40

state 15

    (27) factor -> RESTA . ENTERO
    (28) factor -> RESTA . DECIMAL

    ENTERO          shift and go to state 42
    DECIMAL         shift and go to state 43


state 16

    (23) term -> factor .

    CONCAT          reduce using rule 23 (term -> factor .)
    SUMA            reduce using rule 23 (term -> factor .)
    RESTA           reduce using rule 23 (term -> factor .)
    MULTIPLICADO    reduce using rule 23 (term -> factor .)
    DIVIDIDO        reduce using rule 23 (term -> factor .)
    ASIGNAR         reduce using rule 23 (term -> factor .)
    NOIGUAL         reduce using rule 23 (term -> factor .)
    MENORQ          reduce using rule 23 (term -> factor .)
    MAYORQ          reduce using rule 23 (term -> factor .)
    MENORIGUALQ     reduce using rule 23 (term -> factor .)
    MAYORIGUALQ     reduce using rule 23 (term -> factor .)
    IGUAL           reduce using rule 23 (term -> factor .)
    DPARENT         reduce using rule 23 (term -> factor .)
    IMP             reduce using rule 23 (term -> factor .)
    ID              reduce using rule 23 (term -> factor .)
    FOR             reduce using rule 23 (term -> factor .)
    IF              reduce using rule 23 (term -> factor .)
    $end            reduce using rule 23 (term -> factor .)
    TO              reduce using rule 23 (term -> factor .)
    DLLAVE          reduce using rule 23 (term -> factor .)
    DCOR            reduce using rule 23 (term -> factor .)
    THEN            reduce using rule 23 (term -> factor .)


state 17

    (24) term -> IPARENT . expresion DPARENT
    (8) expresion -> . term
    (9) expresion -> . expresion SUMA expresion
    (10) expresion -> . expresion RESTA expresion
    (11) expresion -> . expresion MULTIPLICADO expresion
    (12) expresion -> . expresion DIVIDIDO expresion
    (13) expresion -> . term concatenar term
    (23) term -> . factor
    (24) term -> . IPARENT expresion DPARENT
    (25) term -> . ICOR expresion DCOR
    (26) factor -> . ID
    (27) factor -> . RESTA ENTERO
    (28) factor -> . RESTA DECIMAL
    (29) factor -> . ENTERO
    (30) factor -> . DECIMAL
    (31) factor -> . STR
    (32) factor -> . empty
    (33) empty -> .

  ! shift/reduce conflict for RESTA resolved as shift
    IPARENT         shift and go to state 17
    ICOR            shift and go to state 18
    ID              shift and go to state 19
    RESTA           shift and go to state 15
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    STR             shift and go to state 22
    CONCAT          reduce using rule 33 (empty -> .)
    DPARENT         reduce using rule 33 (empty -> .)
    SUMA            reduce using rule 33 (empty -> .)
    MULTIPLICADO    reduce using rule 33 (empty -> .)
    DIVIDIDO        reduce using rule 33 (empty -> .)

  ! RESTA           [ reduce using rule 33 (empty -> .) ]

    expresion                      shift and go to state 44
    term                           shift and go to state 14
    factor                         shift and go to state 16
    empty                          shift and go to state 23

state 18

    (25) term -> ICOR . expresion DCOR
    (8) expresion -> . term
    (9) expresion -> . expresion SUMA expresion
    (10) expresion -> . expresion RESTA expresion
    (11) expresion -> . expresion MULTIPLICADO expresion
    (12) expresion -> . expresion DIVIDIDO expresion
    (13) expresion -> . term concatenar term
    (23) term -> . factor
    (24) term -> . IPARENT expresion DPARENT
    (25) term -> . ICOR expresion DCOR
    (26) factor -> . ID
    (27) factor -> . RESTA ENTERO
    (28) factor -> . RESTA DECIMAL
    (29) factor -> . ENTERO
    (30) factor -> . DECIMAL
    (31) factor -> . STR
    (32) factor -> . empty
    (33) empty -> .

  ! shift/reduce conflict for RESTA resolved as shift
    IPARENT         shift and go to state 17
    ICOR            shift and go to state 18
    ID              shift and go to state 19
    RESTA           shift and go to state 15
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    STR             shift and go to state 22
    CONCAT          reduce using rule 33 (empty -> .)
    DCOR            reduce using rule 33 (empty -> .)
    SUMA            reduce using rule 33 (empty -> .)
    MULTIPLICADO    reduce using rule 33 (empty -> .)
    DIVIDIDO        reduce using rule 33 (empty -> .)

  ! RESTA           [ reduce using rule 33 (empty -> .) ]

    expresion                      shift and go to state 45
    term                           shift and go to state 14
    factor                         shift and go to state 16
    empty                          shift and go to state 23

state 19

    (26) factor -> ID .

    CONCAT          reduce using rule 26 (factor -> ID .)
    SUMA            reduce using rule 26 (factor -> ID .)
    RESTA           reduce using rule 26 (factor -> ID .)
    MULTIPLICADO    reduce using rule 26 (factor -> ID .)
    DIVIDIDO        reduce using rule 26 (factor -> ID .)
    ASIGNAR         reduce using rule 26 (factor -> ID .)
    NOIGUAL         reduce using rule 26 (factor -> ID .)
    MENORQ          reduce using rule 26 (factor -> ID .)
    MAYORQ          reduce using rule 26 (factor -> ID .)
    MENORIGUALQ     reduce using rule 26 (factor -> ID .)
    MAYORIGUALQ     reduce using rule 26 (factor -> ID .)
    IGUAL           reduce using rule 26 (factor -> ID .)
    DPARENT         reduce using rule 26 (factor -> ID .)
    IMP             reduce using rule 26 (factor -> ID .)
    ID              reduce using rule 26 (factor -> ID .)
    FOR             reduce using rule 26 (factor -> ID .)
    IF              reduce using rule 26 (factor -> ID .)
    $end            reduce using rule 26 (factor -> ID .)
    TO              reduce using rule 26 (factor -> ID .)
    DLLAVE          reduce using rule 26 (factor -> ID .)
    DCOR            reduce using rule 26 (factor -> ID .)
    THEN            reduce using rule 26 (factor -> ID .)


state 20

    (29) factor -> ENTERO .

    CONCAT          reduce using rule 29 (factor -> ENTERO .)
    SUMA            reduce using rule 29 (factor -> ENTERO .)
    RESTA           reduce using rule 29 (factor -> ENTERO .)
    MULTIPLICADO    reduce using rule 29 (factor -> ENTERO .)
    DIVIDIDO        reduce using rule 29 (factor -> ENTERO .)
    ASIGNAR         reduce using rule 29 (factor -> ENTERO .)
    NOIGUAL         reduce using rule 29 (factor -> ENTERO .)
    MENORQ          reduce using rule 29 (factor -> ENTERO .)
    MAYORQ          reduce using rule 29 (factor -> ENTERO .)
    MENORIGUALQ     reduce using rule 29 (factor -> ENTERO .)
    MAYORIGUALQ     reduce using rule 29 (factor -> ENTERO .)
    IGUAL           reduce using rule 29 (factor -> ENTERO .)
    DPARENT         reduce using rule 29 (factor -> ENTERO .)
    IMP             reduce using rule 29 (factor -> ENTERO .)
    ID              reduce using rule 29 (factor -> ENTERO .)
    FOR             reduce using rule 29 (factor -> ENTERO .)
    IF              reduce using rule 29 (factor -> ENTERO .)
    $end            reduce using rule 29 (factor -> ENTERO .)
    TO              reduce using rule 29 (factor -> ENTERO .)
    DLLAVE          reduce using rule 29 (factor -> ENTERO .)
    DCOR            reduce using rule 29 (factor -> ENTERO .)
    THEN            reduce using rule 29 (factor -> ENTERO .)


state 21

    (30) factor -> DECIMAL .

    CONCAT          reduce using rule 30 (factor -> DECIMAL .)
    SUMA            reduce using rule 30 (factor -> DECIMAL .)
    RESTA           reduce using rule 30 (factor -> DECIMAL .)
    MULTIPLICADO    reduce using rule 30 (factor -> DECIMAL .)
    DIVIDIDO        reduce using rule 30 (factor -> DECIMAL .)
    ASIGNAR         reduce using rule 30 (factor -> DECIMAL .)
    NOIGUAL         reduce using rule 30 (factor -> DECIMAL .)
    MENORQ          reduce using rule 30 (factor -> DECIMAL .)
    MAYORQ          reduce using rule 30 (factor -> DECIMAL .)
    MENORIGUALQ     reduce using rule 30 (factor -> DECIMAL .)
    MAYORIGUALQ     reduce using rule 30 (factor -> DECIMAL .)
    IGUAL           reduce using rule 30 (factor -> DECIMAL .)
    DPARENT         reduce using rule 30 (factor -> DECIMAL .)
    IMP             reduce using rule 30 (factor -> DECIMAL .)
    ID              reduce using rule 30 (factor -> DECIMAL .)
    FOR             reduce using rule 30 (factor -> DECIMAL .)
    IF              reduce using rule 30 (factor -> DECIMAL .)
    $end            reduce using rule 30 (factor -> DECIMAL .)
    TO              reduce using rule 30 (factor -> DECIMAL .)
    DLLAVE          reduce using rule 30 (factor -> DECIMAL .)
    DCOR            reduce using rule 30 (factor -> DECIMAL .)
    THEN            reduce using rule 30 (factor -> DECIMAL .)


state 22

    (31) factor -> STR .

    CONCAT          reduce using rule 31 (factor -> STR .)
    SUMA            reduce using rule 31 (factor -> STR .)
    RESTA           reduce using rule 31 (factor -> STR .)
    MULTIPLICADO    reduce using rule 31 (factor -> STR .)
    DIVIDIDO        reduce using rule 31 (factor -> STR .)
    ASIGNAR         reduce using rule 31 (factor -> STR .)
    NOIGUAL         reduce using rule 31 (factor -> STR .)
    MENORQ          reduce using rule 31 (factor -> STR .)
    MAYORQ          reduce using rule 31 (factor -> STR .)
    MENORIGUALQ     reduce using rule 31 (factor -> STR .)
    MAYORIGUALQ     reduce using rule 31 (factor -> STR .)
    IGUAL           reduce using rule 31 (factor -> STR .)
    DPARENT         reduce using rule 31 (factor -> STR .)
    IMP             reduce using rule 31 (factor -> STR .)
    ID              reduce using rule 31 (factor -> STR .)
    FOR             reduce using rule 31 (factor -> STR .)
    IF              reduce using rule 31 (factor -> STR .)
    $end            reduce using rule 31 (factor -> STR .)
    TO              reduce using rule 31 (factor -> STR .)
    DLLAVE          reduce using rule 31 (factor -> STR .)
    DCOR            reduce using rule 31 (factor -> STR .)
    THEN            reduce using rule 31 (factor -> STR .)


state 23

    (32) factor -> empty .

    CONCAT          reduce using rule 32 (factor -> empty .)
    SUMA            reduce using rule 32 (factor -> empty .)
    RESTA           reduce using rule 32 (factor -> empty .)
    MULTIPLICADO    reduce using rule 32 (factor -> empty .)
    DIVIDIDO        reduce using rule 32 (factor -> empty .)
    ASIGNAR         reduce using rule 32 (factor -> empty .)
    NOIGUAL         reduce using rule 32 (factor -> empty .)
    MENORQ          reduce using rule 32 (factor -> empty .)
    MAYORQ          reduce using rule 32 (factor -> empty .)
    MENORIGUALQ     reduce using rule 32 (factor -> empty .)
    MAYORIGUALQ     reduce using rule 32 (factor -> empty .)
    IGUAL           reduce using rule 32 (factor -> empty .)
    DPARENT         reduce using rule 32 (factor -> empty .)
    IMP             reduce using rule 32 (factor -> empty .)
    ID              reduce using rule 32 (factor -> empty .)
    FOR             reduce using rule 32 (factor -> empty .)
    IF              reduce using rule 32 (factor -> empty .)
    $end            reduce using rule 32 (factor -> empty .)
    TO              reduce using rule 32 (factor -> empty .)
    DLLAVE          reduce using rule 32 (factor -> empty .)
    DCOR            reduce using rule 32 (factor -> empty .)
    THEN            reduce using rule 32 (factor -> empty .)


state 24

    (4) sentencia -> IMP IPARENT expresion . DPARENT
    (9) expresion -> expresion . SUMA expresion
    (10) expresion -> expresion . RESTA expresion
    (11) expresion -> expresion . MULTIPLICADO expresion
    (12) expresion -> expresion . DIVIDIDO expresion

    DPARENT         shift and go to state 46
    SUMA            shift and go to state 29
    RESTA           shift and go to state 30
    MULTIPLICADO    shift and go to state 31
    DIVIDIDO        shift and go to state 32


state 25

    (5) sentencia -> ID ASIGNAR expresion .
    (9) expresion -> expresion . SUMA expresion
    (10) expresion -> expresion . RESTA expresion
    (11) expresion -> expresion . MULTIPLICADO expresion
    (12) expresion -> expresion . DIVIDIDO expresion

    IMP             reduce using rule 5 (sentencia -> ID ASIGNAR expresion .)
    ID              reduce using rule 5 (sentencia -> ID ASIGNAR expresion .)
    FOR             reduce using rule 5 (sentencia -> ID ASIGNAR expresion .)
    IF              reduce using rule 5 (sentencia -> ID ASIGNAR expresion .)
    $end            reduce using rule 5 (sentencia -> ID ASIGNAR expresion .)
    TO              reduce using rule 5 (sentencia -> ID ASIGNAR expresion .)
    DLLAVE          reduce using rule 5 (sentencia -> ID ASIGNAR expresion .)
    SUMA            shift and go to state 29
    RESTA           shift and go to state 30
    MULTIPLICADO    shift and go to state 31
    DIVIDIDO        shift and go to state 32


state 26

    (6) sentencia -> FOR sentencia TO . expresion THEN ILLAVE listaSentencias DLLAVE
    (8) expresion -> . term
    (9) expresion -> . expresion SUMA expresion
    (10) expresion -> . expresion RESTA expresion
    (11) expresion -> . expresion MULTIPLICADO expresion
    (12) expresion -> . expresion DIVIDIDO expresion
    (13) expresion -> . term concatenar term
    (23) term -> . factor
    (24) term -> . IPARENT expresion DPARENT
    (25) term -> . ICOR expresion DCOR
    (26) factor -> . ID
    (27) factor -> . RESTA ENTERO
    (28) factor -> . RESTA DECIMAL
    (29) factor -> . ENTERO
    (30) factor -> . DECIMAL
    (31) factor -> . STR
    (32) factor -> . empty
    (33) empty -> .

  ! shift/reduce conflict for RESTA resolved as shift
    IPARENT         shift and go to state 17
    ICOR            shift and go to state 18
    ID              shift and go to state 19
    RESTA           shift and go to state 15
    ENTERO          shift and go to state 20
    DECIMAL         shift and go to state 21
    STR             shift and go to state 22
    CONCAT          reduce using rule 33 (empty -> .)
    THEN            reduce using rule 33 (empty -> .)
    SUMA            reduce using rule 33 (empty -> .)
